test: Adding Unit tests and Jacoco coverage