@@ -35,17 +35,19 @@ public interface AmenityMapper {
 
   default Amenities mapToAmenities(List<Amenity> amenities) {
     var responseAmenities = new Amenities();
-    responseAmenities.getAmenity().addAll(
-        amenities.stream()
-            .map(this::mapToAmenity)
-            .toList());
+    if (amenities != null) {
+      responseAmenities.getAmenity().addAll(
+          amenities.stream()
+              .map(this::mapToAmenity)
+              .toList());
+    }
     return responseAmenities;
   }
 
   default List<Amenity> mapToAmenitiesList(Amenities amenities) {
     return amenities.getAmenity().stream()
         .map(this::mapToAmenityEntity)
-        .toList();
+        .collect(Collectors.toList());
   }
 
   default Set<Long> getAmenitiesIds(List<Amenity> amenities) {
